@@ -3,6 +3,7 @@ by providing their ideas, suggestions, bug reports and pieces of code.
 
 Names (or nicks) are in alphabetical order.
 
+Abdó Roig-Maranges (aroig)
 Alejandro Pulver (alepulver)
 aleksejrs
 Allan Neal (akneal)
