@@ -1,14 +1,18 @@
 #include <stic.h>
 
-#include <unistd.h> /* unlink() */
+#include <unistd.h> /* symlink() unlink() */
 
 #include <stdio.h> /* fopen() fclose() */
 
+#include "../../src/compat/os.h"
 #include "../../src/int/file_magic.h"
+#include "../../src/utils/fs.h"
+#include "../../src/utils/path.h"
 
 #include "utils.h"
 
 static void check_empty_file(const char fname[]);
+static int has_mime_type_detection_and_symlinks(void);
 static int has_mime_type_detection(void);
 
 TEST(escaping_for_determining_mime_type, IF(has_mime_type_detection))
@@ -16,6 +20,39 @@ TEST(escaping_for_determining_mime_type, IF(has_mime_type_detection))
 	check_empty_file(SANDBOX_PATH "/start'end");
 	check_empty_file(SANDBOX_PATH "/start\"end");
 	check_empty_file(SANDBOX_PATH "/start`end");
+}
+
+TEST(relatively_large_file_name_does_not_crash,
+		IF(has_mime_type_detection_and_symlinks))
+{
+	char path[PATH_MAX];
+
+	const char *const long_name = SANDBOX_PATH "/A/111111111111111111111111111111"
+		"11111111111222222222222222222222222222222222223333333333333333333333333333"
+		"44444444444444444444444444444444444444444444444444444444444444444444444444"
+		"4411111111111111111111111111111111111111111.mp3";
+
+	assert_success(os_mkdir(SANDBOX_PATH "/A", 0700));
+	assert_success(os_mkdir(SANDBOX_PATH "/B", 0700));
+
+	create_file(long_name);
+
+	/* symlink() is not available on Windows, but the rest of the code is fine. */
+#ifndef _WIN32
+	assert_success(symlink(long_name, SANDBOX_PATH "/B/123.mp3"));
+#endif
+
+	assert_success(get_link_target_abs(SANDBOX_PATH "/B/123.mp3",
+				SANDBOX_PATH "/B", path, sizeof(path)));
+
+	assert_success(chdir(SANDBOX_PATH "/B"));
+	assert_non_null(get_mimetype(get_last_path_component(path)));
+	assert_success(chdir(SANDBOX_PATH));
+
+	assert_success(unlink(long_name));
+	assert_success(unlink(SANDBOX_PATH "/B/123.mp3"));
+	assert_success(rmdir(SANDBOX_PATH "/B"));
+	assert_success(rmdir(SANDBOX_PATH "/A"));
 }
 
 static void
@@ -28,6 +65,12 @@ check_empty_file(const char fname[])
 		assert_non_null(get_mimetype(fname));
 		assert_success(unlink(fname));
 	}
+}
+
+static int
+has_mime_type_detection_and_symlinks(void)
+{
+	return not_windows() && has_mime_type_detection();
 }
 
 static int
