@@ -101,6 +101,9 @@
 	Fixed possible memory leak on querying file mime-type (when it wasn't
 	obtained).
 
+	Fixed buffer overflow on obtaining file mime-type.  Thanks to Abdó
+	Roig-Maranges (a.k.a. aroig).
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
